<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/viewCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_card"
            app:srcCompat="@drawable/ar01" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:padding="10dp"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/card_description_scroll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbarStyle="insideOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_fullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp"
                        android:textColor="@color/cardName"
                        android:text="@string/card_name" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description_start"
                        android:visibility="visible"
                        android:textColor="@color/black"
                        tools:visibility="visible" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/full_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/full_description" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tense_fortune" />

                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/back"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_butt"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>