<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="@drawable/magic_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tarot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:contentDescription="@string/The_title_placeholder"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/tarot_title"
            android:visibility="visible"
            app:srcCompat="@drawable/tarot_title" />

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:fontFamily="@font/magical" />

        <TextView
            android:id="@+id/setup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fonts"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/setup_expln"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:typeface="normal"
            android:visibility="visible"
            app:fontFamily="@font/magical" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/fav_colors"
                    android:textColor="@color/cardName"
                    android:textSize="24sp"
                    app:fontFamily="@font/magical" />

                <Spinner
                    android:id="@+id/fav_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="151dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/fav_seasons"
                    android:textColor="@color/cardName"
                    android:textSize="24sp"
                    app:fontFamily="@font/magical" />

                <Spinner
                    android:id="@+id/fav_seasons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/birthday"
                    android:textColor="@color/cardName"
                    android:textSize="24sp"
                    app:fontFamily="@font/magical" />

                <EditText
                    android:id="@+id/birth_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/birthdate_format"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    tools:targetApi="o" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_fortune"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>